--- a/Week01.qmd
+++ b/Week01.qmd
@@ -4,6 +4,9 @@ title: "Week01"
 ---
 
 # Content Summary
+
+The below mind map concludes the content of week 1. Several fundamental concepts on remote sensing are covered in the lecture, including the definitions, types, electromagnetic (EM) waves, energy interaction, and resolution. Next, I will employ Cape Town as an example to further understand and deepen this knowledge.
+
 ![Figure 1 Content Summary](source/week01/week01_summary.png)
 
 # Application
