--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,5 @@
-# Preface {.unnumbered}
+# Personal Introduction {.unnumbered}
 
 This is a Quarto book.
-
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
 
 
