--- a/Week04.qmd
+++ b/Week04.qmd
@@ -58,7 +58,7 @@ In the section of Resilient Future, Keeping Singapore cool is emphasised to miti
 
 Earth observation data on UHI has been widely discussed and its application can provide vital information to understand and address the challenges posed by UHI. Corresponding to Singapore cooling strategy, the section will introduce the mitigation strategies related to remotely sensed data from two perspectives, namely urban morphology and building roofs.
 
-## 2.1 Urban Form: Local Climate Zones (LCZs) {.unnumbered}
+## 2.1 Urban Morphology: Local Climate Zones (LCZs) {.unnumbered}
 
 The mitigation measures of UHI effect have been discussed with urban form. The Local climate zone (LCZ) introduced by Stewart and Oke(2012) provides a new classification system of urban structure,which can be applied to detect local climate changes. By using machine learning to identify and classify urban satellite images,LCZs are categorised into 17 classes, namely 10 urban classes and 7 natural classes (Figure 3). The classification criteria are diverse and can be adjusted according to the geographical characteristics of the study area. Based on the summary of Stewart and Oke(2012) the classification criteria mainly include 4 aspects, as shown in Figure 4.
 
@@ -97,17 +97,31 @@ In support of SDGs: 11 sustainable cities and commnuities: Make cities and human
 # 4.Reference {.unnumbered}
 
 ::: {style="overflow-y: scroll; height: 300px;"}
+Bechtel, B., Demuzere, M., Sismanidis, P., Fenner, D., Brousse, O., Beck, C., Van Coillie, F., Conrad, O., Keramitsoglou, I., Middel, A., Mills, G., Niyogi, D., Otto, M., See, L. and Verdonck, M.-L. (2017). ‘Quality of Crowdsourced Data on Urban Morphology—The Human Influence Experiment (HUMINEX)’. Urban Science, 1 (2), p. 15. doi: 10.3390/urbansci1020015.
+
 Borzino, N., Chng, S., Mughal, M. O. and Schubert, R. (2020). 'Willingness to Pay for Urban Heat Island Mitigation: A Case Study of Singapore'. Climate, 8 (7), p. 82. doi: 10.3390/cli8070082.
+
+Despini, F., Ferrari, C., Santunione, G., Tommasone, S., Muscio, A. and Teggi, S. (2021). ‘Urban surfaces analysis with remote sensing data for the evaluation of UHI mitigation scenarios’. Urban Climate, 35, p. 100761. doi: 10.1016/j.uclim.2020.100761.
 
 Grimmond, S. (2007). 'Urbanization and global environmental change: local effects of urban warming'. The Geographical Journal, 173 (1), pp. 83--88. doi: 10.1111/j.1475-4959.2007.232_3.x.
 
+Mackey, C. W., Lee, X. and Smith, R. B. (2012). ‘Remotely sensing the cooling effects of city scale efforts to reduce urban heat island’. Building and Environment, 49, pp. 348–358. doi: 10.1016/j.buildenv.2011.08.004.
+
 Ministry of Sustainability and the Environment and URA (no date) Factsheet on Singapore's Efforts to Mitigate the Urban Heat Island Effect. Available at: https://www.mse.gov.sg/cos/resources/cos-annex-j.pdf (Assessed: 4 February 2024)
 
+Mushore, T., Odindi, J. and Mutanga, O. (2022). ‘“Cool” Roofs as a Heat-Mitigation Measure in Urban Heat Islands: A Comparative Analysis Using Sentinel 2 and Landsat Data’. Remote Sensing, 14 (17), p. 4247. doi: 10.3390/rs14174247.
+
 Oke, T. R. (1982). 'The energetic basis of the urban heat island'. Quarterly Journal of the Royal Meteorological Society, 108 (455), pp. 1--24. doi: 10.1002/qj.49710845502.
+
+Stewart, I. D. and Oke, T. R. (2012). ‘Local Climate Zones for Urban Temperature Studies’. Bulletin of the American Meteorological Society, 93 (12), pp. 1879–1900. doi: 10.1175/BAMS-D-11-00019.1.
 
 The National Climate Change Secretariat (NCCS) (no date) Impact of Climate Change In Singapore. Available at: https://www.nccs.gov.sg/singapores-climate-action/impact-of-climate-change-in-singapore/ (Assessed: 4 February 2024)
 
 Urban Redevelopment Authority(URA) (2023) Planning for a Liveable and HeatResilient City. Available at: https://www.thegpsc.org/sites/gpsc/files/2.\_singapore\_-\_planning_for_a_liveable_and_heat-resilient_city.pdf (Assessed: 4 February 2024)
+
+Xu, X., Qiu, W., Li, W., Huang, D., Li, X. and Yang, S. (2022). ‘Comparing satellite image and GIS data classified local climate zones to assess urban heat island: A case study of Guangzhou’. Frontiers in Environmental Science, 10, p. 1029445. doi: 10.3389/fenvs.2022.1029445.
+
+Yang, J., Ren, J., Sun, D., Xiao, X., Xia, J. (Cecilia), Jin, C. and Li, X. (2021). ‘Understanding land surface temperature impact factors based on local climate zones’. Sustainable Cities and Society, 69, p. 102818. doi: 10.1016/j.scs.2021.102818.
 
 Zhang, Y., Li, D., Liu, L., Liang, Z., Shen, J., Wei, F. and Li, S. (2021). 'Spatiotemporal Characteristics of the Surface Urban Heat Island and Its Driving Factors Based on Local Climate Zones and Population in Beijing, China'. Atmosphere, 12 (10), p. 1271. doi: 10.3390/atmos12101271.
 :::
