--- a/Week04.qmd
+++ b/Week04.qmd
@@ -72,7 +72,7 @@ The heat island effect on LCZs is mainly examined by combining the Land Surface 
 
 Based on the analysis of summer average LST in Liaoning Province, China (Figure 6), Yang et al.(2021) proposed that LCZE (bare rock and paved) are more likely to increase LST, while LCZA(Dense trees) and LCZG(water) are more likely to decrease LST, aligning with the study of Guangzhou by Xu et al. (2022). In addition, regarding the urban classes of LCZs, Yang et al. (2022) suggested that higher numbers of summer LSTs occur in LCZ 2(compact mid-rise) and LCZ10(heavy industry).On the contrary, Xu et al.(2022) indicated that LCZ 3 (compact low-rise) and LCZ 8 (large low-rise) are the areas with the most severe thermal impact, further proving that there is heterogeneity in the effect of urban space on LST.
 
-![Figure 6 The LCZs box plot with LST in Liaoning Province,China, 2017 and 2019(Source from Yang et al.(2021)) ](source/week04/Box_plots.png)
+![Figure 6 The LCZs box plot with LST in Liaoning Province,China, 2017 and 2019(Source from Yang et al.(2021))](source/week04/Box_plots.png)
 
 To promote green town programmes, Singapore can adopt LCZs to identify the urban morphology with higher and lower thermal impact and conduct urban regeneration. Moreover, the LCZs method can also be applied to long-term monitoring for seasons, which can further propose prevention strategies for thermal impacts.
 
@@ -88,11 +88,13 @@ Moreover, Mushore, Odindi and Mutanga (2022) examine the colour of roof coating 
 
 # 3.Reflection {.unnumbered}
 
+need to be finished
+
 ## 3.1 Linking to global agendas and goals {.unnumbered}
 
 In support of SDGs: 11 sustainable cities and commnuities: Make cities and human settlenents inclusive, safe, resillient and sustainable. 13 Climate action: Take urgent action to combat climate change and its impacts
 
-![Figure 9 In support of SDGs 12 and SDG 13](source/week04/SDG11_13.png) 
+![Figure 9 In support of SDGs 12 and SDG 13](source/week04/SDG11_13.png)
 
 # 4.Reference {.unnumbered}
 
