--- a/Week04.qmd
+++ b/Week04.qmd
@@ -88,7 +88,7 @@ Moreover, Mushore, Odindi and Mutanga (2022) examine the colour of roof coating 
 
 # 3.Reflection {.unnumbered}
 
-need to be finished
+need to be finished the project
 
 ## 3.1 Linking to global agendas and goals {.unnumbered}
 
